syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Chats";
package CecoChat.Contracts.Chats;
import "Chats/DataType.proto";

message HistoryMessage {
  int64 message_id = 1;
  int64 sender_id = 2;
  int64 receiver_id = 3;
  DataType data_type = 4;
  string data = 5;
  map<int64, string> reactions = 6;
}
